# test-anvil-local

./: .anvil_editor.yaml  anvil.yaml  pyproject.toml
server_code/: ServerModule1.py  ServerModule1.pyi  requirements.txt
