[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_anvil_local"
version = "0.1.0"
dependencies = [
    "anvil-app-server"
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
  "server_code"
]

[tool.setuptools.package-data]
"server_code" = ["py.typed"]
